100-workloads/kubeinvaders/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubeinvaders
  labels:
    pod-security.kubernetes.io/enforce: privileged # KubeInvaders needs permissions
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
