100-workloads/kubeinvaders/03-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubeinvaders
  namespace: kubeinvaders
spec:
  parentRefs:
  - name: my-envoy-gateway
    namespace: default # Assuming the Gateway is in default, otherwise we might need a ReferenceGrant
  hostnames:
  - "kubeinvaders.172.16.16.102.sslip.io"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kubeinvaders
      port: 80
